# InverseProblemPackage

./: .gitignore  CEA.cpp  CEA.h  CMakeLists.txt  main.cpp
GeneticAlgorithmCore/: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h
GeneticAlgorithmCore/unit_test/: CMakeLists.txt  GeneticAlgorithmTest.cpp
SelfConsistentRegularization/: .gitignore  .project  .texlipse  documen.synctex  document.tex  mybib.bib
SelfConsistentRegularization/tmp/: .gitignore  document.aux  document.bbl  document.blg
TikhonovSVDCore/: CMakeLists.txt  TikhonovSVD.cpp  TikhonovSVD.h
TikhonovSVDCore/unit_test/: CMakeLists.txt  TikhonovSVDTEST.cpp
VisualCore/: LineChart.cpp  LineChart.h
doc/: Doxyfile  Makefile  conf.py  index.rst  make.bat
doc/html/: _genetic_algorithm_8h_source.html  annotated.html  classes.html  (+7 more)
populationgrid/: generation0.txt  generation1.txt  generation10.txt  generation100.txt  generation101.txt  generation102.txt  generation103.txt  generation104.txt  generation105.txt  generation106.txt  generation107.txt  generation108.txt  generation109.txt  generation11.txt  generation110.txt  generation111.txt  generation112.txt  generation113.txt  generation114.txt  generation115.txt  generation116.txt  generation117.txt  generation118.txt  generation119.txt  generation12.txt  generation120.txt  generation121.txt  generation122.txt  generation123.txt  generation124.txt  generation125.txt  generation126.txt  generation127.txt  generation128.txt  generation129.txt  generation13.txt  generation130.txt  generation131.txt  generation132.txt  generation133.txt  (+103 more)
(+65 files in other folders)
